Fixing language below videos on mobile Portfolio.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -493,6 +493,35 @@ body {
     transform: scale(1.05);
   }
 
+  #portfolio .swiper-slide-active .portfolio-mob-language {
+    opacity: 1;
+    -webkit-transition: opacity 0.75s ease;
+    transition: opacity 0.75s ease;
+  }
+
+  #portfolio .portfolio-mob-language {
+    opacity: 0.20;
+    -webkit-transition: opacity 0.75s ease;
+    transition: opacity 0.75s ease;
+  }
+
+  /* Fixing Alignment on Language on Mobile Heights */
+  #portfolio .portfolio-mob-language {
+    bottom: 0vh;
+    margin-bottom: -1rem;
+  }
+  @media only screen and (min-height: 650px) {
+    #portfolio .portfolio-mob-language {
+      bottom: 0vh;
+      margin-bottom: -1.5rem;
+    }
+  }
+  @media only screen and (min-height: 810px) {
+    #portfolio .portfolio-mob-language {
+      bottom: 3.5vh;
+    }
+  }
+
   #portfolio .swiper-slide-active img {
     filter: brightness(100%) !important;
     -webkit-box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.25), 0 0 10rem 1rem rgba(255, 255, 255, 0.25), inset 2px 2px 0 rgba(255, 255, 255, 0.25);
